--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bodies Unearthed at Serenbe Spark True Crime Investigation</title>
   <style>
     body {
@@ -11,50 +10,70 @@
       line-height: 1.6;
       margin: 0;
       padding: 0;
-      background-color: #f9f9f9;
-      color: #111;
+      background-color: #f4f4f4;
+      color: #333;
     }
     .container {
-      max-width: 720px;
-      margin: 2em auto;
-      padding: 0 1em;
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
       background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h1 {
-      font-size: 2em;
-      margin-top: 0.5em;
+    header {
+      text-align: center;
+      margin-bottom: 20px;
     }
-    .byline {
-      color: #555;
-      font-size: 0.9em;
-      margin-bottom: 1em;
+    header h1 {
+      font-size: 36px;
+      margin: 0;
+      color: #000;
+    }
+    header p {
+      font-size: 14px;
+      color: #666;
     }
     .article-image {
       width: 100%;
       height: auto;
-      margin: 1em 0;
+      margin: 20px 0;
     }
     .caption {
-      font-size: 0.8em;
+      font-size: 14px;
       color: #666;
-      margin-bottom: 2em;
+      margin-bottom: 20px;
       text-align: center;
     }
+    h2 {
+      font-size: 24px;
+      margin-top: 20px;
+      color: #000;
+    }
     p {
-      margin-bottom: 1.2em;
+      margin-bottom: 20px;
+    }
+    footer {
+      margin-top: 40px;
+      padding-top: 20px;
+      border-top: 1px solid #ddd;
+      font-size: 14px;
+      color: #666;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Bodies Unearthed at Serenbe Spark True Crime Investigation</h1>
-    <div class="byline">By Caroline James, Staff Writer – The Atlanta Journal-Constitution<br>April 1, 2025</div>
+    <header>
+      <h1>The Atlanta Journal-Constitution</h1>
+      <p>Friday, March 28, 2025</p>
+    </header>
 
-    <img class="article-image" src="https://serenbe.com/uploads/images/_1200x630_crop_center-center_none/Serenbe-Aerial.jpg" alt="Aerial view of Serenbe">
-    <div class="caption">An aerial view of Serenbe, the wellness-focused community where remains were discovered during a landscaping project. (Courtesy of Serenbe)</div>
-
+    <h2>Bodies Unearthed at Serenbe Spark True Crime Investigation</h2>
+    <p><strong>By Caroline James, Staff Writer</strong></p>
     <p><strong>CHATTAHOOCHEE HILLS, Ga.</strong> — A planned landscaping project at the upscale Serenbe community took a chilling turn this week after workers unearthed what authorities are now calling a "potential true crime scene" — the remains of at least two individuals believed to have been buried more than a decade ago.</p>
+
+    <img class="article-image" src="aerial_view.jpg" alt="Aerial view representing Serenbe">
+    <div class="caption">An aerial view representing the Serenbe community. (Public Domain)</div>
 
     <p>The discovery was made Monday morning near the edge of the resort's organic farm, where an expansion of the walking trails was underway. A backhoe operator noticed what appeared to be a partial skull and immediately stopped work, according to Chattahoochee Hills Police Chief Marcus Bell.</p>
 
@@ -79,6 +98,10 @@
     <p>Anyone with information is encouraged to contact the Chattahoochee Hills Police Department tip line at (404) 555-0199.</p>
 
     <p><em>This is a developing story and will be updated as more information becomes available.</em></p>
+
+    <footer>
+      <p>© 2025 The Atlanta Journal-Constitution. All rights reserved.</p>
+    </footer>
   </div>
 </body>
 </html>
