--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <div class="container">
     <h2>Bodies Unearthed at Serenbe Spark True Crime Investigation</h2>
-    <p><strong>By Caroline James, Staff Writer · April 1, 2025</strong></p>
+    <p><strong>By Caroline James, Staff Writer </strong></p>
 
     <p><strong>CHATTAHOOCHEE HILLS, Ga.</strong> — A planned landscaping project at the upscale Serenbe community took a chilling turn this week after workers unearthed what authorities are now calling a "potential true crime scene" — the remains of at least two individuals believed to have been buried more than a decade ago.</p>
 
